# portfolio_app

./: app.py  pyproject.toml  schema.sql
portfolio/: database_persistence.py  utils.py
static/: style.css
templates/: accounts.html  assets.html  create_user  create_user.html  edit_asset.html  holdings.html  layout.html  new_account.html  new_asset.html  new_holding.html  signin.html  update_asset.html  update_holding.html
tests/: test_database_persistence.py
